# active_siam_mae

./: .gitignore  README.md  pyproject.toml
active_siam_mae.egg-info/: SOURCES.txt
data/medium_data/: shard000.npz  shard001.npz  shard002.npz  shard003.npz  shard004.npz  shard005.npz  shard006.npz  shard007.npz  shard008.npz  shard009.npz
notebooks/: dataset.ipynb
src/: config.py  datamodule.py  dataset.py  generate_poly_dataset.py  model.py  system.py  train.py
src/active_siam_mae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
training_configs/: example_config.yaml  laptop_test.yaml
